Prevent the search term to overlap with the close button

--- a/_sass/components/_search.scss
+++ b/_sass/components/_search.scss
@@ -15,7 +15,7 @@
 
 .search-field {
   width: 100%;
-  padding: .6875rem 1rem .9375rem;
+  padding: .6875rem 2.75rem .9375rem 1rem;
   border: 0;
   font-size: 1.625rem; /*26px*/
   font-weight: $font-regular;
